  - #2104, ST_World2RasterCoord, ST_World2RasterCoordX and
    ST_World2RasterCoordY renamed to ST_WorldToRasterCoord,
    ST_WorldToRasterCoordX and ST_WorldToRasterCoordY. ST_Raster2WorldCoord,
    ST_Raster2WorldCoordX and ST_Raster2WorldCoordY renamed to
    ST_RasterToWorldCoord, ST_RasterToWorldCoordX and ST_RasterToWorldCoordY

* New Features *

  - ST_Segmentize(geography) (Paul Ramsey / OpenGeo)
  - ST_DelaunayTriangles (Sandro Santilli / Vizzuality)
  - ST_NearestValue, ST_Neighborhood (Bborie Park / UC Davis)
  - ST_PixelAsPoint, ST_PixelAsPoints (Bborie Park / UC Davis)
  - ST_PixelAsCentroid, ST_PixelAsCentroids (Bborie Park / UC Davis)
  - ST_Raster2WorldCoord, ST_World2RasterCoord (Bborie Park / UC Davis)
  - Additional raster/raster spatial relationship functions
    (ST_Contains, ST_ContainsProperly, ST_Covers, ST_CoveredBy, ST_Disjoint,
    ST_Overlaps, ST_Touches, ST_Within, ST_DWithin, ST_DFullyWithin)
    (Bborie Park / UC Davis)
  - Added array variants of ST_SetValues() to set many pixel values of a band
    in one call (Bborie Park / UC Davis)
  - #1643, Tiger Geocoder - Tiger 2011 loader 
    (Regina Obe / Paragon Corporation) Funded by Hunter Systems Group
  - GEOMETRYCOLLECTION support for ST_MakeValid (Sandro Santilli / Vizzuality)
  - ST_PixelOfValue (Bborie Park / UC Davis)
  - Casts to/from PostgreSQL geotypes (point/path/polygon).
  - #310, ST_DumpPoints converted to a C function (Nathan Wagner)
  - #2011, ST_DumpValues to output raster as array (Bborie Park / UC Davis)
  - #2030, n-raster (and n-band) ST_MapAlgebra (Bborie Park / UC Davis)
  - Added geomval array variant of ST_SetValues() to set many pixel values of
    a band using a set of geometries and corresponding values in one call
    (Bborie Park / UC Davis)
  - ST_Tile(raster) to break up a raster into tiles (Bborie Park / UC Davis)
  - #739, UpdateRasterSRID()
  - #1895, new r-tree node splitting algorithm (Alex Korotkov)