@@ -29,6 +29,7 @@ PostGIS 2.1.0
 
 * New Features *
 
+  - topology.clearTopoGeom (Sandro Santilli / Vizzuality)
   - ST_Segmentize(geography) (Paul Ramsey / OpenGeo)
   - ST_DelaunayTriangles (Sandro Santilli / Vizzuality)
   - ST_NearestValue, ST_Neighborhood (Bborie Park / UC Davis)
